tests/neg-macros/i18677-b.check

-- Error: tests/neg-macros/i18677-b/Test_2.scala:2:6 -------------------------------------------------------------------
1 |@extendFoo
2 |class AFoo // error
  |^
  |Malformed tree was found while expanding macro with -Xcheck-macros.
  |The tree does not conform to the compiler's tree invariants.
  |
  |Macro was:
  |@scala.annotation.internal.SourceFile("tests/neg-macros/i18677-b/Test_2.scala") @scala.annotation.experimental @extendFoo class AFoo()
  |
  |The macro returned:
  |@scala.annotation.internal.SourceFile("tests/neg-macros/i18677-b/Test_2.scala") @scala.annotation.experimental @extendFoo class AFoo() extends Foo
  |
  |Error:
  |assertion failed: Parents of class symbol differs from the parents in the tree for class AFoo
  |
  |Parents in symbol: [class Object]
  |Parents in tree: [class Foo]
  |
  |
  |stacktrace available when compiling with `-Ydebug`
